--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.7",
     "axios": "^1.2.6",
-    "json2iob": "^2.2.0"
+    "http-cookie-agent": "^5.0.2",
+    "json2iob": "^2.2.0",
+    "tough-cookie": "^4.1.2"
   },
   "devDependencies": {
     "@iobroker/testing": "^4.1.0",
